Infra/devops/whitelist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-whitelist
  namespace: devops
spec:
  ipAllowList:
    sourceRange:
      - "211.192.252.137/8"
      - "10.0.0.0/8"
